Assembler/tests/ok/includes/includes2.asm
bra foo

#include <included.asm>
