Assembler/tests/bad/includes/a.asm
add r8, r9, r10
#include <b.asm>
